Fix for clone selection